--- a/css/header.css
+++ b/css/header.css
@@ -1,62 +1,66 @@
-.main-header{
-    display:flex;
-    flex-direction: column;
-    color:#7e7e7e
+.main-header {
+  display: flex;
+  flex-direction: column;
+  color: #7e7e7e;
 }
 
-.mobile-nav{
-    visibility: hidden;
-    height: 0;
-}
-.top-nav{
-    background-color: black;
-    width:100%;
-    padding:0.6rem 1rem
-
+.mobile-nav {
+  visibility: hidden;
+  height: 0;
 }
 
-
-.main-nav{
-    padding:1rem
+.top-nav {
+  background-color: black;
+  width: 100%;
+  padding: 0.6rem 1rem;
 }
 
-
-.nav-links{
-    float:left
+.main-nav {
+  padding: 1rem;
 }
 
-
-.nav-right{
-float:right
+.nav-links {
+  float: left;
 }
 
-.nav-link{
-    display:inline
-}
-.nav-link{
-    padding-right:0.6rem
+.nav-right {
+  float: right;
 }
 
-@media (max-device-width:768px){
-    .nav-right{
-        display:none;
-    }
-    .main-nav{
-        /* position: fixed */
-    }
-    .main-header>img{
-        width:10px;
-        height:10px;
-    }
+.nav-link {
+  display: inline;
+  padding-right: 0.6rem;
 }
 
-@media (max-device-width:480px){
-    .mobile-nav .nav-links{
-        visibility: visible;
-        float: right;
-        padding: 1rem;
-    }
-    .top-nav, .main-nav{
-        display: none;
-    }
+@media (max-device-width: 768px) {
+  .nav-right {
+    display: none;
+  }
+
+  .main-header > img {
+    width: 10px;
+    height: 10px;
+  }
+}
+
+@media (max-device-width: 480px) {
+  .mobile-nav {
+    visibility: visible;
+    float: right;
+    padding: 1rem;
+    height: auto;
+    position: fixed;
+    background-color: #fff;
+    width: 100%;
+    border-bottom: 1px solid gray;
+  }
+
+  .mobile-nav .nav-links {
+    float: right;
+  }
+
+  .top-nav,
+  .main-nav {
+    display: none;
+  }
 }
