--- a/css/header.css
+++ b/css/header.css
@@ -9,6 +9,12 @@
   height: 0;
 }
 
+.yellow-nav{
+    width:100%;
+    background-color: yellow;
+    text-align:center
+}
+
 .top-nav {
   background-color: black;
   width: 100%;
@@ -46,19 +52,47 @@
 @media (max-device-width: 480px) {
   .mobile-nav {
     visibility: visible;
-    float: right;
-    padding: 1rem;
+    /* padding: 1rem; */
     height: auto;
     position: fixed;
     background-color: #fff;
     width: 100%;
-    border-bottom: 1px solid gray;
+    /* border-bottom: 1px solid gray; */
+    display: flex;
+    margin-bottom: 40%
+  }
+
+  .mobile-nav .mobile-image{
+      background-color: palevioletred;
+      color:white;
+      height:10vh;
+      width:18vh;
+      float:left;
+      font-size:20px;
+      font-family:cursive;
+      word-spacing: 0.3rem;
+      font-weight:600;
+      text-align: center;
+      padding: 10px
+      
+
   }
 
   .mobile-nav .nav-links {
-    float: right;
+    padding-left:58%;
+    padding-top: 1.2rem;
+    padding-bottom: 1rem
   }
 
+  .mobile-nav .nav-links .nav-link{
+      padding-left:5px;
+      font-size:1.2rem
+  }
+
+  .yellow-nav{
+      margin-top:14%;
+      padding:0.6rem
+  }
   .top-nav,
   .main-nav {
     display: none;
