--- a/css/section2.css
+++ b/css/section2.css
@@ -8,8 +8,13 @@
 
 }
 
-.section-heading{
+.mid-section{
+    grid-template-rows: 1fr
+}
+
+.section-heading, .sect-heading{
     padding:2%;
+    padding-top:5%;
     padding-left:10%;
     font-size:24px;
     font-weight:800;
@@ -32,10 +37,75 @@
     width:100%;
 }
 
+.right-links{
+    width:80%;
+    margin:0px auto
+}
+
+.sect-heading{
+    position: absolute;
+}
+
+.right-links>ul{
+    float:right;
+    padding-top:7%;
+    font-size:16px;
+    color:red
+}
+
+.right-links>ul>li{
+    display:inline;
+    padding-left:5px;
+    border-right:1px solid red;
+    padding-right:5px
+    
+}
+
+@media (max-device-width: 1050px){
+    .sect-heading{
+        position: relative;
+    }
+
+    .right-links>ul{
+        float: none;;
+        padding-top:0;
+        font-size:18px;
+        color:red;
+    }
+
+    .right-links>ul>li{
+        padding-left:0;
+
+    }
+
+}
+
 @media (max-device-width: 768px){
     .row{
         grid-template-columns: repeat(3,1fr);
         grid-template-rows: repeat(3,1fr);
+    }
+
+    .mid-section{
+        grid-template-rows: 1fr
+    }
+
+    .sect-heading{
+        position: relative;
+    }
+
+    .right-links>ul{
+        float: none;;
+        padding-top:0;
+        font-size:18px;
+        color:red
+    }
+
+    .right-links>ul>li{
+        display:block;
+        padding-left:0;
+        border:none;
+        padding-bottom:1%;
     }
 }
 
