--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
 
 @media (max-device-width: 480px) {
   .top-section {
-    margin-top: 2%;
+    margin-top: 65px;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
