--- a/css/header.css
+++ b/css/header.css
@@ -12,7 +12,9 @@
 .yellow-nav{
     width:100%;
     background-color: yellow;
-    text-align:center
+    text-align:center;
+    position: relative;
+    
 }
 
 .top-nav {
@@ -52,12 +54,10 @@
 @media (max-device-width: 480px) {
   .mobile-nav {
     visibility: visible;
-    /* padding: 1rem; */
     height: auto;
     position: fixed;
     background-color: #fff;
     width: 100%;
-    /* border-bottom: 1px solid gray; */
     display: flex;
     margin-bottom: 40%
   }
@@ -73,13 +73,14 @@
       word-spacing: 0.3rem;
       font-weight:600;
       text-align: center;
-      padding: 10px
+      padding: 10px;
+      padding-bottom:0
       
 
   }
 
   .mobile-nav .nav-links {
-    padding-left:58%;
+    padding-left:56%;
     padding-top: 1.2rem;
     padding-bottom: 1rem
   }
@@ -90,11 +91,13 @@
   }
 
   .yellow-nav{
-      margin-top:14%;
-      padding:0.6rem
+      margin-top:15%;
+      padding:0.6rem;
+
   }
   .top-nav,
   .main-nav {
     display: none;
   }
 }
+
