--- a/css/section2.css
+++ b/css/section2.css
@@ -12,7 +12,7 @@
     grid-template-rows: 1fr
 }
 
-.section-heading, .sect-heading{
+.section-heading, .sect-heading, .deals-heading{
     padding:2%;
     padding-top:5%;
     padding-left:10%;
@@ -22,18 +22,23 @@
     
 }
 
-.title{
+.title,.deal-heading{
     font-size: 16px;
     font-weight: 800
 }
 
-.subtitle{
+.subtitle, .price{
     font-size:13px;
     color:#aaaaaa;
     padding-top:5px
 }
 
-.image{
+.price1{
+    font-size:11px;
+    text-decoration: line-through;
+}
+
+.image, .image-square{
     width:100%;
 }
 
@@ -117,7 +122,7 @@
     .col-qtr{
         display:flex
     }
-    .image{
+    .image, .image-square{
         width: 75px;
         height:75px;
         padding-right:10px
