--- a/css/section2.css
+++ b/css/section2.css
@@ -1,7 +1,6 @@
 .row {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 1fr 1fr;
   grid-gap: 20px 10px;
   width: 80%;
   margin: 0 auto;
@@ -45,18 +44,14 @@
   width: 100%;
 }
 
-.sect-heading{
-    position: absolute;
-    z-index: -10;
-
+.sect-heading {
+  position: absolute;
+  z-index: -10;
 }
 
 .right-links {
-    width: 80%;
-    margin: 0 auto;}
-    
-.sect-heading {
-  position: absolute;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .right-links > ul {
