--- a/css/header.css
+++ b/css/header.css
@@ -5,7 +5,7 @@
 }
 
 .mobile-nav {
-  visibility: hidden;
+  display: none;
   height: 0;
 }
 
@@ -58,7 +58,6 @@
 
 @media (max-device-width: 480px) {
   .mobile-nav {
-    visibility: visible;
     height: 50px;
     position: fixed;
     background-color: white;
@@ -69,11 +68,11 @@
   }
 
   .mobile-nav .mobile-image {
-    width: 16%;
+    height: 100%;
   }
 
   .mobile-image img {
-    width: 100%;
+    height: 100%;
   }
 
   .mobile-nav .nav-links {
