--- a/css/header.css
+++ b/css/header.css
@@ -9,11 +9,14 @@
   height: 0;
 }
 
+.logo-nav { display: none; }
+
 .yellow-nav {
   width: 100%;
   background-color: yellow;
   text-align: center;
   position: relative;
+  padding: 1rem 0;
 }
 
 .top-nav {
@@ -50,13 +53,23 @@
     display: none;
   }
 
-  .main-header > img {
-    width: 10px;
-    height: 10px;
+  .logo-nav {
+    display: block;
+    position: absolute;
+    height: 16%;
+  }
+
+  .main-nav,
+  .top-nav {
+    margin-left: 5.5rem;
   }
 }
 
 @media (max-device-width: 480px) {
+  .logo-nav {
+    display: none;
+  }
+
   .mobile-nav {
     height: 50px;
     position: fixed;
